Fixed up the home page so that everything looks nice. Improved appearance on mobile and smaller sizes. Turned category-card and creator-icon into React components- can reuse on other pages.

--- a/cs5610-final-project/src/components/home/home.css
+++ b/cs5610-final-project/src/components/home/home.css
@@ -1,6 +1,1 @@
-.wbdv-circle{
-    background: #8a8aee;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-}
+
